adjusting form component styling to fix blueprint align-items:baseline change

--- a/src/FormComponents/style.css
+++ b/src/FormComponents/style.css
@@ -26,3 +26,7 @@
 .tg-hide-drop-target .ant-upload.ant-upload-drag {
 	display: none;
 }
+
+.tg-form-component > * {
+	width: 100%;
+}
